--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "ramda": "^0.19.0",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
-    "react-redux": "^4.0.6",
-    "redux": "^3.0.5",
-    "redux-saga": "^0.3.3"
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-saga": "^0.10.5",
+    "reselect": "^2.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
